<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.abu.customizeecomerce.CreateAccount">

    <Button
        android:id="@+id/Submit_Create"
        android:layout_width="200px"
        android:layout_height="100px"
        android:background="@android:drawable/progress_horizontal"
        android:text="submite"
        android:textColor="@android:color/background_light"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/phoneText"
        android:layout_alignEnd="@+id/phoneText"
        android:layout_marginBottom="51dp"
        android:onClick="showMessage"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/phoneText"
        android:layout_alignBottom="@+id/phoneText"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignRight="@+id/textView3"
        android:text="@string/PhoneNumber"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/usernameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/username"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rePasswordText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/Password"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rePasswordText"
        android:layout_alignBottom="@+id/rePasswordText"
        android:text="@string/RePassword"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/usernameText"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView7"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginTop="43dp"
        android:background="@android:drawable/editbox_background"
        android:capitalize="none"
        android:ems="10"
        android:inputType="text"
        android:password="false"
        android:selectAllOnFocus="false"
        android:singleLine="false" />

    <EditText
        android:id="@+id/passwordText"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameText"
        android:layout_alignStart="@+id/usernameText"
        android:layout_below="@+id/usernameText"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/editbox_background"
        android:capitalize="none"
        android:ems="10"
        android:inputType="textPassword"
        android:password="false"
        android:selectAllOnFocus="false"
        android:singleLine="false" />

    <EditText
        android:id="@+id/rePasswordText"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/editbox_background"
        android:capitalize="none"
        android:ems="10"
        android:inputType="textPassword"
        android:password="false"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:layout_below="@+id/passwordText"
        android:layout_alignLeft="@+id/passwordText"
        android:layout_alignStart="@+id/passwordText" />

    <EditText
        android:id="@+id/phoneText"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:capitalize="none"
        android:ems="10"
        android:inputType="phone"
        android:password="false"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:layout_below="@+id/rePasswordText"
        android:layout_alignLeft="@+id/rePasswordText"
        android:layout_alignStart="@+id/rePasswordText"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="100px"
        android:layout_height="100px"
        android:id="@+id/textView8"
        android:background="@drawable/qq"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/textView7"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="400px"
        android:layout_height="70px"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignEnd="@+id/usernameText"
        android:layout_alignRight="@+id/usernameText"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="40dp"
        android:text="@string/CreateAccount"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/phoneText"
        android:layout_marginTop="16dp"
        android:text="@string/EMail"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_alignBaseline="@+id/textView13"
        android:layout_alignBottom="@+id/textView13"
        android:layout_alignLeft="@+id/phoneText"
        android:layout_alignStart="@+id/phoneText"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:background="@android:drawable/editbox_background"
        android:layout_marginTop="16dp"/>

</RelativeLayout>
