<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abu.customizeecomerce.CreateAppStep5">

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignEnd="@+id/editText2"
        android:layout_alignRight="@+id/editText2"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:text="@string/SaveItem"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="288dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="44dp"
        android:background="@color/black_overlay"
        android:text="@string/Build"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/textView28"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignEnd="@+id/textView14"
        android:layout_alignRight="@+id/textView14"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/UploadImage"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="288dp"
        android:onClick="uploadImg"/>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editText2"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="21dp"
        android:text="@string/Step5"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="400px"
        android:layout_height="250px"
        android:editable="false"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="142dp"
        android:layout_below="@+id/editText2"
        android:layout_toLeftOf="@+id/button3"
        android:layout_toStartOf="@+id/button3"
        android:layout_marginTop="63dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="58dp"
        android:layout_alignTop="@+id/textView17"
        android:layout_toRightOf="@+id/textView17"
        android:layout_toEndOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView14"
        android:layout_marginTop="36dp"
        android:text="@string/ItemName"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="73dp" />
    <TextView
        android:id="@+id/textView25"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:background="@android:color/holo_green_dark"
        android:text="  1"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView26"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_marginLeft="9dp"
        android:layout_marginStart="9dp" />
    <TextView
        android:id="@+id/textView26"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:background="@android:color/holo_green_dark"
        android:text="  2"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_alignBaseline="@+id/textView25"
        android:layout_alignBottom="@+id/textView25"
        android:layout_toRightOf="@+id/textView25"
        android:layout_toEndOf="@+id/textView25" />
    <TextView
        android:id="@+id/textView27"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:background="@android:color/holo_green_dark"
        android:text="3"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_constraintRight_creator="1"
        android:layout_alignBaseline="@+id/textView26"
        android:layout_alignBottom="@+id/textView26"
        android:layout_toRightOf="@+id/textView26"
        android:layout_toEndOf="@+id/textView26" />
    <TextView
        android:id="@+id/textView28"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:background="@android:color/holo_green_dark"
        android:text="  4"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_alignBaseline="@+id/textView27"
        android:layout_alignBottom="@+id/textView27"
        android:layout_toRightOf="@+id/textView27"
        android:layout_toEndOf="@+id/textView27" />
    <TextView
        android:id="@+id/textView46"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:background="@android:color/background_light"
        android:text="  5"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/textView28"
        android:layout_alignBottom="@+id/textView28"
        android:layout_toRightOf="@+id/textView28"
        android:layout_toEndOf="@+id/textView28" />
</RelativeLayout>
